[Core] Hide last connection for non admins Concerne #3795 https://redmine.orupaca.fr/issues/3795

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
   <% end %>
   <% end %>
     <li><%=l(:label_registered_on)%>: <%= format_date(@user.created_on) %></li>
-  <% unless @user.last_login_on.nil? %>
+  <% if !@user.last_login_on.nil? && User.current.admin? %>
     <li><%=l(:field_last_login_on)%>: <%= format_date(@user.last_login_on) %></li>
   <% end %>
 </ul>
