--- a/app/views/custom_fields/formats/_string.html.erb
+++ b/app/views/custom_fields/formats/_string.html.erb
@@ -1,4 +1,8 @@
 <%= render :partial => 'custom_fields/formats/regexp', :locals => {:f => f, :custom_field => custom_field} %>
+<p>
+  <%= f.text_area :possible_values, :value => @custom_field.possible_values.to_a.join("\n"), :rows => 15 %>
+  <em class="info"><%= l(:text_custom_field_possible_values_info) %></em>
+</p>
 <p><%= f.check_box :text_formatting, {:label => :setting_text_formatting, :data => {:disables => '#custom_field_url_pattern'}}, 'full', '' %></p>
 <p><%= f.text_field(:default_value) %></p>
 <p><%= f.text_field :url_pattern, :size => 50, :label => :label_link_values_to %></p>
