--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -1,5 +1,8 @@
 <%= call_hook :view_account_login_top %>
-
+<div class="or-container">
+  <hr>
+  <p><span>OU</span></p>
+</div>
 <div id="login-form">
   <%= form_tag(signin_path, onsubmit: 'return keepAnchorOnSignIn(this);') do %>
   <%= back_url_hidden_field_tag %>
